--- a/menu-complete.html
+++ b/menu-complete.html
@@ -1000,7 +1000,7 @@
                             "prices": [
                                 {
                                     "size": "كاملة",
-                                    "price": 270
+                                    "price": 340
                                 }
                             ]
                         },
@@ -1010,7 +1010,7 @@
                             "prices": [
                                 {
                                     "size": "نص فرخة",
-                                    "price": 145
+                                    "price": 175
                                 }
                             ]
                         },
@@ -1019,8 +1019,11 @@
                             "ingredients": "ربع فرخة مشوية علي فحم بالعضم (صدر او ررك) + رز + بطاطس + تومية + مخلل + عيش",
                             "prices": [
                                 {
-                                    "size": "ربع فرخة",
-                                    "price": 80
+                                    "size": "صدر",
+                                    "price": 115
+                                },{
+                                    "size": "ورك",
+                                    "price": 100
                                 }
                             ]
                         },
@@ -1030,7 +1033,7 @@
                             "prices": [
                                 {
                                     "size": "كاملة",
-                                    "price": 290
+                                    "price": 350
                                 }
                             ]
                         },
@@ -1040,7 +1043,7 @@
                             "prices": [
                                 {
                                     "size": "نص فرخة",
-                                    "price": 155
+                                    "price": 180
                                 }
                             ]
                         },
@@ -1050,7 +1053,16 @@
                             "prices": [
                                 {
                                     "size": "وجبة",
-                                    "price": 120
+                                    "price": 260
+                                }
+                            ]
+                        },{
+                            "title": "½ كباب",
+                            "ingredients": "4 سيخ كباب + رز + بطاطس + 1 عيش + مخلل + توميه",
+                            "prices": [
+                                {
+                                    "size": "وجبة",
+                                    "price": 500
                                 }
                             ]
                         },
@@ -1060,7 +1072,7 @@
                             "prices": [
                                 {
                                     "size": "نص كيلو",
-                                    "price": 180
+                                    "price": 300
                                 }
                             ]
                         },
@@ -1070,7 +1082,27 @@
                             "prices": [
                                 {
                                     "size": "وجبة",
-                                    "price": 110
+                                    "price": 260
+                                }
+                            ]
+                        },
+			{
+                            "title": "½ شيش طاووك",
+                            "ingredients": "4 سيخ شيش طاووك+ بطاطس + 2 عيش + مخلل + توميه + طحينه",
+                            "prices": [
+                                {
+                                    "size": "نص كيلو",
+                                    "price": 280
+                                }
+                            ]
+                        },
+                        {
+                            "title": "وجبه شيش طاووك",
+                            "ingredients": "2 سيخ طاووك+ رز + بطاطس + 1 عيش + مخلل + توميه",
+                            "prices": [
+                                {
+                                    "size": "وجبة",
+                                    "price": 160
                                 }
                             ]
                         },
@@ -1080,7 +1112,7 @@
                             "prices": [
                                 {
                                     "size": "نص كيلو",
-                                    "price": 200
+                                    "price": 410
                                 }
                             ]
                         },
@@ -1090,7 +1122,7 @@
                             "prices": [
                                 {
                                     "size": "وجبة",
-                                    "price": 120
+                                    "price": 220
                                 }
                             ]
                         },
@@ -1100,7 +1132,7 @@
                             "prices": [
                                 {
                                     "size": "نص كيلو",
-                                    "price": 220
+                                    "price": 365
                                 }
                             ]
                         },
@@ -1110,7 +1142,7 @@
                             "prices": [
                                 {
                                     "size": "وجبة",
-                                    "price": 130
+                                    "price": 250
                                 }
                             ]
                         },
@@ -1120,7 +1152,7 @@
                             "prices": [
                                 {
                                     "size": "نص كيلو",
-                                    "price": 160
+                                    "price": 220
                                 }
                             ]
                         },
@@ -1130,7 +1162,7 @@
                             "prices": [
                                 {
                                     "size": "وجبة",
-                                    "price": 100
+                                    "price": 120
                                 }
                             ]
                         }
@@ -1145,7 +1177,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 180
+                                    "price": 195
                                 }
                             ]
                         },
@@ -1155,7 +1187,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 160
+                                    "price": 185
                                 }
                             ]
                         },
@@ -1165,7 +1197,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 220
+                                    "price": 325
                                 }
                             ]
                         },
@@ -1175,7 +1207,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 450
+                                    "price": 700
                                 }
                             ]
                         },
@@ -1185,7 +1217,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 450
+                                    "price": 830
                                 }
                             ]
                         },
@@ -1195,7 +1227,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 480
+                                    "price": 680
                                 }
                             ]
                         },
@@ -1205,7 +1237,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 550
+                                    "price": 700
                                 }
                             ]
                         },
@@ -1215,7 +1247,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 380
+                                    "price": 410
                                 }
                             ]
                         },
@@ -1225,7 +1257,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 320
+                                    "price": 430
                                 }
                             ]
                         },
@@ -1235,7 +1267,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 340
+                                    "price": 460
                                 }
                             ]
                         },
@@ -1245,7 +1277,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 360
+                                    "price": 435
                                 }
                             ]
                         },
@@ -1255,7 +1287,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 420
+                                    "price": 400
                                 }
                             ]
                         },
@@ -1265,7 +1297,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 400
+                                    "price": 380
                                 }
                             ]
                         },
@@ -1275,7 +1307,7 @@
                             "prices": [
                                 {
                                     "size": "صينية",
-                                    "price": 380
+                                    "price": 450
                                 }
                             ]
                         }
