--- a/menu-complete.html
+++ b/menu-complete.html
@@ -332,7 +332,7 @@
                         },
                         {
                             "title": "ماريا لحم",
-                            "ingredients": "شاورما لحمة + طحينة + بصل + بقدونس + دبس رمان + خس",
+                            "ingredients": "شاورما لحمة + طحينة + بصل + بقدونس + دبس رمان",
                             "prices": [
                                 {
                                     "size": "0",
@@ -342,7 +342,7 @@
                         },
                         {
                             "title": "ماريا ميكس",
-                            "ingredients": "نص فراخ بصوص تومية + نص لحمة بصوص طحينة ودبس رمان",
+                            "ingredients": "نص فراخ بصوص تومية + نص لحمة بصوص طحينة + بصل + بقدونس + دبس رمان ",
                             "prices": [
                                 {
                                     "size": "0",
@@ -397,7 +397,7 @@
                         },
                         {
                             "title": "شاورما لحمة",
-                            "ingredients": "طحينة + لفت + بصل + بقدونس + دبس رمان + سماق",
+                            "ingredients": "طحينة + لفت + بصل + بقدونس + دبس رمان + سماق + طماطم",
                             "prices": [
                                 {
                                     "size": "سوري لارج",
