--- a/index.html
+++ b/index.html
@@ -1312,6 +1312,101 @@
                             ]
                         }
                     ]
+                },
+{
+                    "name": "كبسه",
+                    "items": [
+                        {
+                            "title": "كبسه شاورما فراخ",
+                            "ingredients": "شاورما فراخ+ زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 165
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه شاورما لحمه",
+                            "ingredients": "شاورما لحمه+ زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 185
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه دجاج سوري",
+                            "ingredients": " نص فرخه شوايه + زر كبسه + صوص دقوس + صوص زبادي ",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 220
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه شاورما ميكس",
+                            "ingredients": "شاورما فراخ + شاورما لحمه+ زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 175
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه دجاج تكا",
+                            "ingredients": "نص فرخه تكا+ زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 190
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه 4 وراك",
+                            "ingredients": "4 وراك + زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 235
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه شيش طاووك",
+                            "ingredients": "2 سيخ شيش طاووك+ زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 180
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه مسحب مشوي",
+                            "ingredients": " نص فرخه مخليه+ زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 200
+                                }
+                            ]
+                        },
+                        {
+                            "title": "كبسه كفته تركي",
+                            "ingredients": "2 سيخ كفته+ زر كبسه + صوص دقوس + صوص زبادي",
+                            "prices": [
+                                {
+                                    "size": "0",
+                                    "price": 190
+                                }
+                            ]
+                        }
+                    ]
                 }
             ]
         }
@@ -1505,7 +1600,7 @@
             } else if (currentFilter !== 'all') {
                 message = `عرض فئة ${currentFilter}`;
             } else {
-                message = 'جميع الأصناف متاحة';
+                message = '';
             }
 
             searchInfo.textContent = message;
