--- a/index.html
+++ b/index.html
@@ -545,6 +545,24 @@
                                     "price": 165
                                 }
                             ]
+                        },
+                        {
+                            "title": "بطاطس",
+                            "ingredients": "كلوسلو + توميه + كاتشب",
+                            "prices": [
+                                {
+                                    "size": "سوري",
+                                    "price": 40
+                                },
+                                {
+                                    "size": "فرنساوي",
+                                    "price": 45
+                                },
+                                {
+                                    "size": "موتزريلا",
+                                    "price": "15"
+                                }
+                            ]
                         }
                     ]
                 },
@@ -1341,6 +1359,16 @@
                                 {
                                     "size": "صينية",
                                     "price": 450
+                                }
+                            ]
+                        },
+                        {
+                            "title": "صينية ملوك الدلع",
+                            "ingredients": "4 ورك  رز",
+                            "prices": [
+                                {
+                                    "size": "صينية",
+                                    "price": 235
                                 }
                             ]
                         }
