--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,7 @@
                         },
                         {
                             "title": "صينية ملوك الدلع",
-                            "ingredients": "4 ورك  رز",
+                            "ingredients": "4 ورك + رز",
                             "prices": [
                                 {
                                     "size": "صينية",
