Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -559,8 +559,8 @@
                                     "price": 45
                                 },
                                 {
-                                    "size": "موتزريلا",
-                                    "price": "15"
+                                    "size": "اضافه موتزريلا",
+                                    "price": "15+"
                                 }
                             ]
                         }
@@ -1671,3 +1671,4 @@
 </body>
 
 </html>
+
