--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 </head>
 
 <body style="height: 100%; margin: 0;">
-    <!-- <div id="passwordOverlay"
+    <div id="passwordOverlay"
         style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: white; display: flex; justify-content: center; align-items: center; z-index: 1000;">
         <div style="background: white; padding: 30px; border-radius: 10px; text-align: center;">
             <input type="password" id="passwordInput" style="padding: 10px; margin: 10px 0; width: 200px;"
@@ -303,7 +303,7 @@
                 style="padding: 10px 20px; background: #e63946; color: white; border: none; border-radius: 5px; cursor: pointer;">دخول</button>
             <p id="errorMsg" style="color: red; margin-top: 10px; display: none;"></p>
         </div>
-    </div> -->
+    </div> 
 
     <h1>قائمة الطعام</h1>
 
@@ -325,28 +325,28 @@
     </div>
 
     <script>
-        // // Password protection
-        // function checkPassword() {
-        //     const password = document.getElementById('passwordInput').value;
-        //     if (password === 'MBDTF') {
-        //         document.getElementById('passwordOverlay').style.display = 'none';
-        //         document.body.style.overflow = 'auto';
-        //     } else {
-        //         document.getElementById('errorMsg').style.display = 'block';
-        //         document.getElementById('passwordInput').value = '';
-        //         document.getElementById('passwordInput').focus();
-        //     }
-        // }
+        /Password protection
+         function checkPassword() {
+            const password = document.getElementById('passwordInput').value;
+        if (password === 'Astroworld') {
+               document.getElementById('passwordOverlay').style.display = 'none';
+                document.body.style.overflow = 'auto';
+            } else {
+              document.getElementById('errorMsg').style.display = 'block';
+                document.getElementById('passwordInput').value = '';
+                 document.getElementById('passwordInput').focus();
+            }
+         }
 
-        // Add event listener for Enter key
-        // document.addEventListener('DOMContentLoaded', function () {
-        //     document.getElementById('passwordInput').addEventListener('keypress', function (e) {
-        //         if (e.key === 'Enter') {
-        //             checkPassword();
-        //         }
-        //     });
-        //     document.body.style.overflow = 'hidden';
-        // });
+         Add event listener for Enter key
+         document.addEventListener('DOMContentLoaded', function () {
+             document.getElementById('passwordInput').addEventListener('keypress', function (e) {
+                if (e.key === 'Enter') {
+                     checkPassword();
+                }
+             });
+             document.body.style.overflow = 'hidden';
+        });
 
         const menuData = {
             "categories": [
@@ -1671,4 +1671,5 @@
 </body>
 
 </html>
+
 
