--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@
                         },
                         {
                             "title": "صينية المشاوي *",
-                            "ingredients": "5 ورك مشوي تكا + رز بسمتي + بطاطس + طحينة",
+                            "ingredients": "5 ورك مشوي تكا + رز بسمتي + بطاطس + 2 كيس عيش + طحينة",
                             "prices": [
                                 {
                                     "size": "صينية",
@@ -1353,7 +1353,7 @@
                         },
                         {
                             "title": "صينية مكس مشاوي *",
-                            "ingredients": "4 ورك مشوي + 2 كفتة + بطاطس + رز + طحينة",
+                            "ingredients": "4 ورك مشوي + 2 كفتة + بطاطس + رز + 2 كيس عيش + طحينة",
                             "prices": [
                                 {
                                     "size": "صينية",
@@ -1670,4 +1670,5 @@
 </body>
 
 </html>
+
 
