--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 </head>
 
 <body style="height: 100%; margin: 0;">
-    <div id="passwordOverlay"
+    <!-- <div id="passwordOverlay"
         style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: white; display: flex; justify-content: center; align-items: center; z-index: 1000;">
         <div style="background: white; padding: 30px; border-radius: 10px; text-align: center;">
             <input type="password" id="passwordInput" style="padding: 10px; margin: 10px 0; width: 200px;"
@@ -303,6 +303,7 @@
                 style="padding: 10px 20px; background: #e63946; color: white; border: none; border-radius: 5px; cursor: pointer;">دخول</button>
             <p id="errorMsg" style="color: red; margin-top: 10px; display: none;"></p>
         </div>
+    </div>  -->
     </div> 
 
     <h1>قائمة الطعام</h1>
@@ -1670,5 +1671,6 @@
 </body>
 
 </html>
+
 
 
