--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         </div>
     </div>  -->
 
-    <h1>قائمة الطعام</h1>
+    <h1>Menu</h1>
 
     <div class="search-container">
         <div class="search-controls">
@@ -1696,3 +1696,4 @@
 </body>
 
 </html>
+
