Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                         },
                         {
                             "title": "برجر",
-                            "ingredients": "صوص بيج برجر + بصل + طماطم + خس + خيار مخلل",
+                            "ingredients": "صوص بيج برجر + بصل + طماطم + خس + خيار مخلل + شيدر",
                             "prices": [
                                 {
                                     "size": "سنجل",
@@ -1696,5 +1696,6 @@
 </body>
 
 </html>
+
 
 
